--- a/history.txt
+++ b/history.txt
@@ -12,7 +12,7 @@ Testing git to effective control my branchs and everything here
 ........................this iis new
 .............
 ............
-.............
+...................... this is after
 ............
 .............
 ............
