Esto es un mensaje de commit sin indicacion

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,4 @@
+
 Testing git to effective control my branchs and everything here
 
 .............
@@ -16,3 +17,5 @@ Testing git to effective control my branchs and everything here
 ............
 .............
 ............
+
+Esta es mi historia para probar git
