UsingVim :wd command

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,4 @@
-
-Testing git to effective control my branchs and everything here
+cortando texto desde vim
 
 .............
 ............
@@ -16,6 +15,7 @@ Testing git to effective control my branchs and everything here
 ...................... this is after
 ............
 .............
-............
 
 Esta es mi historia para probar git
+
+
